force-app/main/default/objects/Visit_Capture__c/Visit_Capture__c.object-meta.xml
<CustomObject>
    <description>Capture et enrichissement d&apos;une visite commerciale : intègre la transcription ECI d&apos;un VideoCall In Person Meeting (si présent) OU une saisie standalone, et produit un CR IA soigné en s&apos;appuyant sur le grounding d&apos;un Demo_Context__c.</description>
    <label>Visit Capture</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Captures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>