force-app/main/default/objects/Visit_Capture__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compte client rencontré.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Captures</relationshipLabel>
    <relationshipName>Visit_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>