force-app/main/default/objects/Visit_Capture__c/fields/Action_Plan_Materialized__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Materialized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE une fois que le plan d&apos;action IA a été transformé en Tasks + Events réels.</description>
    <label>Plan d&apos;action matérialisé</label>
    <type>Checkbox</type>
</CustomField>