force-app/main/default/objects/Visit_Capture__c/fields/AI_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>AI_Action_Plan__c</fullName>
    <description>Plan d&apos;action en JSON structuré généré par le prompt CR : liste d&apos;items {type, title, description, owner, dueDate, startDateTime?, durationMinutes?}. Consommé par le flow Materialize_Action_Plan.</description>
    <label>Plan d&apos;action (JSON IA)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>