force-app/main/default/objects/Visit_Capture__c/fields/AI_Report__c.field-meta.xml
<CustomField>
    <fullName>AI_Report__c</fullName>
    <description>CR généré par IA : rapport HTML structuré avec résumé, points clés, insights, recommandations.</description>
    <label>AI Report</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>