force-app/main/default/objects/Visit_Capture__c/fields/AI_Visit_Brief__c.field-meta.xml
<CustomField>
    <fullName>AI_Visit_Brief__c</fullName>
    <description>HTML visit brief generated before the meeting by the Prepare_Visit_Brief AI prompt. Prepares the sales rep with context, talking points, hooks, objections, success criteria.</description>
    <label>AI Visit Brief</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>