force-app/main/default/objects/Visit_Capture__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact principal rencontré.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Captures</relationshipLabel>
    <relationshipName>Visit_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>