force-app/main/default/objects/Visit_Capture__c/fields/Demo_Context__c.field-meta.xml
<CustomField>
    <fullName>Demo_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grounding de la démo à utiliser comme contexte pour la génération du CR.</description>
    <label>Demo Context</label>
    <referenceTo>Demo_Context__c</referenceTo>
    <relationshipLabel>Visit Captures</relationshipLabel>
    <relationshipName>Visit_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>