force-app/main/default/objects/Visit_Capture__c/fields/Detected_Language__c.field-meta.xml
<CustomField>
    <fullName>Detected_Language__c</fullName>
    <description>Code langue (ex: fr, en) détecté par le prompt CR à partir des éléments de grounding.</description>
    <label>Detected Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>