force-app/main/default/objects/Visit_Capture__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Id de l'Event d'origine qui a déclenché la création de la Visit Capture.</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>