force-app/main/default/objects/Visit_Capture__c/fields/Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Link__c</fullName>
    <description>Lien cliquable vers l'Event d'origine stocké dans Event__c.</description>
    <formula>IF( ISBLANK(Event__c), NULL, HYPERLINK(&quot;/&quot; &amp; Event__c, &quot;Ouvrir l&apos;événement&quot;, &quot;_top&quot;) )</formula>
    <label>Source Event</label>
    <type>Text</type>
</CustomField>