force-app/main/default/objects/Visit_Capture__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunité liée à la visite.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visit Captures</relationshipLabel>
    <relationshipName>Visit_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>