force-app/main/default/objects/Visit_Capture__c/fields/VideoCall__c.field-meta.xml
<CustomField>
    <fullName>VideoCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup vers le VideoCall (In Person Meeting) associé, quand ECI est déployé. Optionnel : absent en mode standalone.</description>
    <label>VideoCall</label>
    <referenceTo>VideoCall</referenceTo>
    <relationshipLabel>Visit Captures</relationshipLabel>
    <relationshipName>Visit_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>