force-app/main/default/objects/Visit_Capture__c/fields/Visit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Visit_Summary__c</fullName>
    <description>Notes libres rapides du SE après la visite (avant génération du CR).</description>
    <label>Free Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>