force-app/main/default/objects/Visit_Capture__c/fields/Voice_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Voice_Transcript__c</fullName>
    <description>Transcription vocale : auto-importée depuis VideoCallTranscript si VideoCall__c renseigné, OU saisie/dictée manuellement.</description>
    <label>Voice Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>